--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <main>
     <section id="hero">
       <div class="hero-image">
-        <img src="hero-image.jpg" alt="Hero Image">
+        <img src="/images/hero mountain.jpg" alt="Hero Image">
       </div>
     </section>
 
