--- a/index.html
+++ b/index.html
@@ -5,23 +5,28 @@
   <title>My Portfolio</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  <header>
-    <div class="top-section">
-      <div class="image-container">
+  <nav>
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Skills</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </nav>
+
+  <section id="hero">
+    <div class="hero-image">
+      <img src="/images/hero mountain.jpg" alt="Hero Image">
+      <div class="text-overlay">
+        <h1>Peter Ndirangu Nyambura</h1>
+        <h2>Software Engineering Student</h2>
       </div>
-      <h1>Peter Ndirangu Nyambura</h1>
-      <h2>Software Engineering Student</h2>
     </div>
-  </header>
+  </section>
 
   <main>
-    <section id="hero">
-      <div class="hero-image">
-        <img src="/images/hero mountain.jpg" alt="Hero Image">
-      </div>
-    </section>
-
     <section id="portfolio">
       <h2>Hello! Meet Peter</h2>
       <section id="about">
@@ -31,6 +36,17 @@
           <p>I am <b>Peter Ndirangu Nyambura</b>, a highly skilled Graphics Designer with a passion for UI/UX design and a comprehensive understanding of Adobe Suite, Figma, and Corel. I have a demonstrated ability to create visually captivating designs that effectively communicate brand messages and elevate user experiences. Equipped with a strong eye for detail, excellent project management capabilities, and a collaborative mindset to deliver exceptional design solutions. I am committed to staying updated with industry trends and continuously improving my skills to deliver cutting-edge designs. A creative professional dedicated to translating client requirements into visually stunning and user-centric designs.</p>
           <p>I am currently studying Software Engineering at Moringa School to further utilize my skills as a product designer and turn them into fully functional problem-solving products.</p>
         </div>
+
+        <h3>skills</h3>
+        
+        <div class="Skills">
+          <img src="./images/Corel Logo.png" alt="Corel">
+          <img src="./images/css-logo.png" alt="CSS">
+          <img src="./images/figma.png" alt="figma">
+          <img src="./images/HTML5_logo.png" alt="html">
+          <img src="./images/Illustrator-Logo.png" alt="illustrator">
+        </div>
+
       </section>
 
       <section id="Experiences">
